// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button row 1`] = `
"<div class=\\"pe-button-row\\">
  <a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=
  \\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      One
    </div>
  </div></a><a class=\\"pe-button pe-text-button pe-raised-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Two
    </div>
  </div></a><a class=\\"pe-button pe-text-button pe-raised-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Three
    </div>
  </div></a>
</div>
"
`;

exports[`Dark tone class + light tone 1`] = `
"<div style=\\"background: rgb(255, 255, 255);\\" class=\\"pe-button-row\\">
  <a class=
  \\"pe-button pe-text-button pe-raised-button pe-light-tone\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Normal
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button pe-raised-button pe-button--disabled pe-light-tone\\"
  tabindex=\\"-1\\" disabled>
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-0\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-0\\"></div>
    </div>
    <div class=\\"pe-button__label\\">
      Disabled
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button pe-raised-button pe-light-tone tests-raised-button-themed-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Theme
    </div>
  </div></a>
</div>
"
`;

exports[`Dark tone class + light tone class 1`] = `
"<div style=\\"background: rgb(255, 255, 255);\\" class=
\\"pe-button-row pe-light-tone\\">
  <a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=
  \\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Normal
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button pe-raised-button pe-button--disabled\\"
  tabindex=\\"-1\\" disabled>
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-0\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-0\\"></div>
    </div>
    <div class=\\"pe-button__label\\">
      Disabled
    </div>
  </div></a><a class=
  \\"pe-button pe-text-button pe-raised-button tests-raised-button-themed-button\\"
  tabindex=\\"0\\">
  <div class=\\"pe-button__content\\">
    <div class=\\"pe-shadow pe-shadow--animated\\">
      <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
      <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
    </div>
    <div class=\\"pe-ripple\\"></div>
    <div class=\\"pe-button__wash\\"></div>
    <div class=\\"pe-button__focus\\"></div>
    <div class=\\"pe-button__label\\">
      Theme
    </div>
  </div></a>
</div>
"
`;

exports[`No options 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: animateOnTap (false) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Don't animate shadow
  </div>
</div></a>
"
`;

exports[`Option: children 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div><span>Child</span>
</div></a>
"
`;

exports[`Option: class 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button class-x\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: className 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button className-x\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: content 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div><span>Content</span>
</div></a>
"
`;

exports[`Option: disabled (false) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Not disabled
  </div>
</div></a>
"
`;

exports[`Option: disabled (true) 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button pe-button--disabled\\"
tabindex=\\"-1\\" disabled>
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-0\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-0\\"></div>
  </div>
  <div class=\\"pe-button__label\\">
    Disabled
  </div>
</div></a>
"
`;

exports[`Option: disabled -- dark tone class 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button pe-button--disabled\\"
tabindex=\\"-1\\" disabled>
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-0\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-0\\"></div>
  </div>
  <div class=\\"pe-button__label\\">
    Label
  </div>
</div></a>
"
`;

exports[`Option: element 1`] = `
"<button class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=
\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></button>
"
`;

exports[`Option: id 1`] = `
"<a id=\\"id-x\\" class=\\"pe-button pe-text-button pe-raised-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: inactivate (2s) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Inactivated for 2s
  </div>
</div></a>
"
`;

exports[`Option: inactive (false) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Not inactive
  </div>
</div></a>
"
`;

exports[`Option: inactive (true) 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button pe-button--inactive\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Inactive
  </div>
</div></a>
"
`;

exports[`Option: ink (false) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    No ink
  </div>
</div></a>
"
`;

exports[`Option: label -- dark tone class (should be app's primary color) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Label
  </div>
</div></a>
"
`;

exports[`Option: label 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Label
  </div>
</div></a>
"
`;

exports[`Option: raised (with option z: 2) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-2\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-2\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Raised to 2
  </div>
</div></a>
"
`;

exports[`Option: raised (with option z: 5) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-5\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-5\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Raised to 5
  </div>
</div></a>
"
`;

exports[`Option: selected 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button pe-button--selected\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Selected
  </div>
</div></a>
"
`;

exports[`Option: style (colors) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div style=
\\"background-color: rgb(239, 108, 0); color: rgb(255, 255, 255);\\"
class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Styled
  </div>
</div></a>
"
`;

exports[`Option: tabindex 1`] = `
"<a tabindex=\\"3\\" class=\\"pe-button pe-text-button pe-raised-button\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
</div></a>
"
`;

exports[`Option: url (with oncreate) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\"
href=\\"#!/shadow\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Go to /#/shadow
  </div>
</div></a>
"
`;

exports[`Option: wash (false) 1`] = `
"<a class=\\"pe-button pe-text-button pe-raised-button\\" tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    No wash
  </div>
</div></a>
"
`;

exports[`Themed button (hover color) 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button tests-raised-button-hover-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Hover button
  </div>
</div></a>
"
`;

exports[`Themed button (should be red) 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button tests-raised-button-themed-button\\"
tabindex=\\"0\\">
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-1\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-1\\"></div>
  </div>
  <div class=\\"pe-ripple\\"></div>
  <div class=\\"pe-button__wash\\"></div>
  <div class=\\"pe-button__focus\\"></div>
  <div class=\\"pe-button__label\\">
    Themed button
  </div>
</div></a>
"
`;

exports[`Themed button (with option disabled) 1`] = `
"<a class=
\\"pe-button pe-text-button pe-raised-button pe-button--disabled tests-raised-button-themed-button\\"
tabindex=\\"-1\\" disabled>
<div class=\\"pe-button__content\\">
  <div class=\\"pe-shadow pe-shadow--animated\\">
    <div class=\\"pe-shadow__bottom pe-shadow--z-0\\"></div>
    <div class=\\"pe-shadow__top pe-shadow--z-0\\"></div>
  </div>
  <div class=\\"pe-button__label\\">
    Disabled themed button
  </div>
</div></a>
"
`;
